# FunWithVectors

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: release.yml
benchmarks/: CMakeLists.txt  PlanetsBench.cpp  Vec2Bench.cpp
cmake/: data.cmake  libs.cmake
include/: Consts.hpp  FpsCounter.hpp  Planet.hpp  PlanetSystem.hpp  SimdPlanetSystem.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  intrinsics.hpp
include/math/: Utils.hpp  Vec2.hpp  Vec2xN.hpp  Vec3.hpp  Vec4.hpp
src/: Planet.cpp  PlanetSystem.cpp  SimdPlanetSystem.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  main.cpp  main_simd.cpp
src/math/: Vec2.cpp  Vec3.cpp  Vec4.cpp
tests/: CMakeLists.txt  Vec2Tests.cpp  Vec2xNTests.cpp  Vec3Tests.cpp  Vec4Tests.cpp
